fix too long file names not visible

--- a/assets/style.css
+++ b/assets/style.css
@@ -39,9 +39,9 @@ summary::-webkit-details-marker {
 
 .tree-nav__item {
   display: block;
-  white-space: nowrap;
   position: relative;
 }
+
 .tree-nav__item.is-expandable::before {
   border-left: 1px solid #333;
   content: '';
@@ -51,17 +51,21 @@ summary::-webkit-details-marker {
   top: 28px;
   height: calc(100% - 28px);
 }
+
 .tree-nav__item .tree-nav__item {
   margin-left: 28px;
 }
-.tree-nav__item.is-expandable[open] > .tree-nav__item-title::before {
+
+.tree-nav__item.is-expandable[open]>.tree-nav__item-title::before {
   font-family: Fontawesome;
   transform: rotate(90deg);
 }
-.tree-nav__item.is-expandable > .tree-nav__item-title {
+
+.tree-nav__item.is-expandable>.tree-nav__item-title {
   padding-left: 28px;
 }
-.tree-nav__item.is-expandable > .tree-nav__item-title::before {
+
+.tree-nav__item.is-expandable>.tree-nav__item-title::before {
   position: absolute;
   will-change: transform;
   transition: transform 300ms ease;
@@ -79,9 +83,11 @@ summary::-webkit-details-marker {
   outline: 0;
   line-height: 30px;
 }
+
 .tree-nav__item-title:hover {
   color: #0a58ca;
 }
+
 .tree-nav__item-title .fas {
   display: inline;
   padding-left: 16px;
@@ -89,6 +95,7 @@ summary::-webkit-details-marker {
   color: #666;
   position: relative;
 }
+
 .tree-nav__item-title .fas::before {
   top: 0;
   position: absolute;
